--- a/TheShopApp/package.json
+++ b/TheShopApp/package.json
@@ -24,6 +24,7 @@
     "react-native-paper": "^4.11.2",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.3.2",
+    "react-navigation-stack": "^2.10.4",
     "react-native-screens": "~3.10.1",
     "@expo/vector-icons": "^12.0.5",
     "@react-native-community/masked-view": "^0.1.11",
