--- a/TheShopApp/package.json
+++ b/TheShopApp/package.json
@@ -29,6 +29,7 @@
     "react-navigation": "4.1.1",
     "react-navigation-header-buttons": "^6.3.1",
     "react-navigation-stack": "^2.10.4",
+    "react-navigation-drawer": "^2.6.0",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2"
   },
