--- a/TheShopApp/package.json
+++ b/TheShopApp/package.json
@@ -17,6 +17,7 @@
     "expo-app-loading": "~1.3.0",
     "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
+    "moment": "^2.29.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
@@ -27,9 +28,9 @@
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
     "react-navigation": "4.1.1",
+    "react-navigation-drawer": "^2.6.0",
     "react-navigation-header-buttons": "^6.3.1",
     "react-navigation-stack": "^2.10.4",
-    "react-navigation-drawer": "^2.6.0",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2"
   },
